<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_home"
        android:contentDescription="@string/description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="6dp">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/txtName"
        android:textSize="20sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:paddingTop="6dp"/>

        <ImageView
            android:id="@+id/btnWish"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_wish_heart"
            android:contentDescription="@string/description"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDesc"
    android:textSize="14sp"/>

    <TextView
        android:id="@+id/txtColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtColor"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPrice"
        android:textSize="15sp"
        android:textStyle="bold"/>
</LinearLayout>