<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_bag_circle"
            android:layout_gravity="center"
            android:paddingTop="180dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_empty"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:paddingTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_guide"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_button"
        android:textSize="20sp"
        android:backgroundTint="@color/black"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"/>

</FrameLayout>